--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
             </div>
         </div>
     </div>
-    
+    <footer>
+        <p>copyright@ your webside 2025</p>
+    </footer>
 </body>
 </html>
